# schoolofhaskell

./: .gitignore  .gitmodules  Application.hs  CHANGELOG.md  README.md  fpbuild.config  ghcjs-stack.yaml  schoolofhaskell.cabal  stack.yaml
app/: devel.hs
client/: Ace.hs  Communication.hs  Import.hs  Model.hs  PosMap.hs  TermJs.hs  Types.hs  View.hs  main.hs
client/Import/: Util.hs
client/React/: Ace.hs  IFrame.hs  TermJs.hs  Unmanaged.hs
client/View/: Annotation.hs  Build.hs  Console.hs  Docs.hs  Editor.hs  TypeInfo.hs
config/: keter.yml  settings.yml  test-settings.yml
demo/: calculator.html  index.html  no-docs-available.html
dev-scripts/: build-all.sh  build-client.sh  build-css.sh  build-ghcjs-deps-internal.sh  build-ghcjs-deps.sh  client-file-watch.sh  css-file-watch.sh  generate-css.sh  install-ghcjs-deps-internal.sh  install-ghcjs-deps.sh  make-container-image.sh  run-demo.sh  setup-environment.sh  soh-runner.sh  soh-server.sh
dev-scripts/container-docker/: Dockerfile
dev-scripts/internal/: CompileLucius.hs  build-client.sh  install-ghcjs-deps.sh
doc/: wishlist.md
runner/: soh-runner.cabal
runner/main/: Main.hs
runner/src/SchoolOfHaskell/: Runner.hs
scheduler/: soh-scheduler.cabal  stack.yaml
scheduler/main/: Main.hs
scheduler/src/SchoolOfHaskell/: Scheduler.hs
scheduler/src/SchoolOfHaskell/Scheduler/: AWS.hs  Types.hs  Web.hs
scripts/: build-ghcjs-deps-internal.sh  build-ghcjs-deps.sh
server/: Application.hs  schoolofhaskell.cabal  soh-server.cabal
server/Handler/: Editor.hs  Home.hs
server/Yesod/: GHCJS.hs
server/config/: routes
soh-client/: Ace.hs  Communication.hs  Container.hs  ContainerClient.hs  Import.hs  Model.hs  PosMap.hs  TermJs.hs  Types.hs  View.hs  main.hs  soh-client.cabal  soh.lucius  stack.yaml
soh-client/Import/: Util.hs
soh-client/React/: IFrame.hs  Unmanaged.hs
soh-client/View/: Annotation.hs  Build.hs  Console.hs  Docs.hs
soh-client/src/: Import.hs  Main.hs  Model.hs  Types.hs  View.hs
soh-client/src/Import/: Util.hs
soh-client/src/JavaScript/: Ace.hs  IFrame.hs  TermJs.hs  Unmanaged.hs
soh-client/src/Model/: Protocol.hs  Server.hs
soh-client/src/View/: Annotation.hs  Build.hs  Console.hs  PosMap.hs  TypeInfo.hs
soh-runner/: soh-runner.cabal
soh-runner-api/: soh-runner-api.cabal
soh-runner-api/src/SchoolOfHaskell/: RunnerAPI.hs
soh-runner-api/src/SchoolOfHaskell/Runner/: API.hs
soh-runner/main/: Main.hs
soh-runner/src/SchoolOfHaskell/: Runner.hs
soh-scheduler/: Dockerfile  Makefile  soh-scheduler.cabal  stack.yaml
soh-scheduler-api/: soh-scheduler-api.cabal
soh-scheduler-api/src/SchoolOfHaskell/Scheduler/: API.hs
soh-scheduler/main/: Main.hs
soh-scheduler/src/SchoolOfHaskell/: Scheduler.hs
soh-scheduler/src/SchoolOfHaskell/Scheduler/: AWS.hs  Types.hs  Web.hs
soh-server/: soh-server.cabal
soh-server/Handler/: Editor.hs  Home.hs
soh-server/config/: routes  settings.yml
soh-server/templates/: default-layout-wrapper.hamlet  editor.julius  editor.lucius  homepage.hamlet
templates/: editor.julius  editor.lucius  homepage.hamlet
