name:                soh-client
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              FP Complete Developers
maintainer:          dev@fpcomplete.com
copyright:           2015 FP Complete Corporation
category:            Development
build-type:          Simple
cabal-version:       >=1.10

Flag local-soh-runner
    Description:   Use local soh-runner
    Default:       False

Flag local-soh-scheduler
    Description:   Use local soh-scheduler (which will use AWS soh-runners)
    Default:       False

executable soh-client
  js-sources:          util.js
  ghc-options:         -Wall
  if flag(local-soh-scheduler)
    cpp-options:       -DLOCAL_SOH_SCHEDULER
  if flag(local-soh-runner)
    cpp-options:       -DLOCAL_SOH_RUNNER
  default-language:    Haskell2010
  main-is:             main.hs
  extensions:          CPP
                       DeriveDataTypeable
                       DeriveGeneric
                       FlexibleInstances
                       ForeignFunctionInterface
                       GeneralizedNewtypeDeriving
                       JavaScriptFFI
                       LambdaCase
                       MultiParamTypeClasses
                       NoImplicitPrelude
                       OverloadedStrings
                       ParallelListComp
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TypeFamilies
                       ViewPatterns
  build-depends:       base >=4.7 && <5
                     , aeson >= 0.8
                     , async >= 2.0
                     , base >= 4.7
                     , bytestring >= 0.10
                     , ghcjs-ace
                     , ghcjs-base >= 0.1
                     , ghcjs-dom >= 0.1
                     , ghcjs-jquery >= 0.1
                     , ghcjs-prim >= 0.1
                     , ghcjs-react
                     , ghcjs-websockets >= 0.3.0.4
                     , ide-backend-common
                     , stack-ide-api
                     , lens >= 4.7
                     , mtl >= 2.1
                     , soh-runner-api
                     , soh-scheduler-api
                     , stm >= 2.4
                     , text >= 1.2
                     , transformers
                     , uuid-types >= 1.0
                     , vector >= 0.10
                     , void >= 0.7
