name:                soh-runner-api
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              FP Complete Developers
maintainer:          dev@fpcomplete.com
copyright:           2015 FP Complete Corporation
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     SchoolOfHaskell.Runner.API
  ghc-options:         -Wall
  build-depends:       base >= 4.5 && < 5,
                       JsonGrammar,
                       ide-backend-json,
                       stack-prism,
                       text
