name:                soh-runner
version:             0.0.1
license:             MIT
license-file:        LICENSE
author:              FP Complete Developers
maintainer:          dev@fpcomplete.com
copyright:           2015 FP Complete Corporation
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     SchoolOfHaskell.Runner
  other-modules:       Paths_soh_runner
  build-depends:       base >=4.7 && <5
                     , aeson
                     , http-types
                     , ide-backend
                     , ide-backend-client
                     , text
                     , wai
                     , wai-websockets
                     , warp
                     , websockets

executable soh-runner
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , optparse-simple
                     , soh-runner
                     , text
