name:                soh-scheduler-api
version:             0.1.2
license:             MIT
license-file:        LICENSE
author:              FP Complete Developers
maintainer:          dev@fpcomplete.com
copyright:           2015 FP Complete Corporation
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     SchoolOfHaskell.Scheduler.API
  build-depends:       aeson
                     , base >=4.7 && <5
                     , lens
                     , text
                     , uuid-types
