name:                soh-scheduler
version:             0.1.3
license:             MIT
license-file:        LICENSE
author:              FP Complete Developers
maintainer:          dev@fpcomplete.com
copyright:           2015 FP Complete Corporation
category:            System
build-type:          Simple
cabal-version:       >=1.10

Flag no-cache
    Description:   Disable caching of static files
    Default:       False

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     SchoolOfHaskell.Scheduler
  other-modules:       SchoolOfHaskell.Scheduler.Web
                       SchoolOfHaskell.Scheduler.AWS
                       SchoolOfHaskell.Scheduler.Types
  ghc-options:         -Wall
  if flag(no-cache)
    cpp-options:       -DNO_CACHE
  build-depends:       aeson
                     , airship
                     , amazonka
                     , amazonka-core
                     , amazonka-ec2
                     , amazonka-ecs
                     , base >=4.7 && <5
                     , base-prelude
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , exceptions
                     , http-media
                     , http-types
                     , lens
                     , monad-logger
                     , mtl
                     , resourcet
                     , soh-scheduler-api
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , uuid
                     , wai
                     , wai-cors
                     , warp

executable sohs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , base-prelude
                     , cabal-file-th
                     , optparse-applicative
                     , soh-scheduler
                     , template-haskell
                     , time
